--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -1,7 +1,7 @@
 @import '~@pxblue/colors/palette';
 @import 'utility';
 @import './mixins/input-field';
-
+@import './mixins/chip';
 
 @mixin darktheme($theme) {
     $primary: map-get($theme, primary);
@@ -13,6 +13,59 @@
         primary: createSimplePalette($primary),
         error: createSimplePalette($pxb-red),
     );
+
+    /* Chips */
+    $chipText: map-get($pxb-white, 50);
+    $chipPrimary: (
+        text: $chipText,
+        backgroundPalette: $pxb-blue,
+    );
+    $chipAccent: (
+        text: $chipText,
+        backgroundPalette: $pxb-lightBlue,
+    );
+    $chipWarn: (
+        text: $chipText,
+        backgroundPalette: $pxb-red,
+    );
+    $chipDefault: (
+        text: map-get($foreground, text),
+        backgroundPalette: $pxb-black,
+        remove: map-get($pxb-black, 200),
+        removeHover: map-get($pxb-black, 100),
+    );
+    @include pxb-mat-chip($chipPrimary, $chipAccent, $chipWarn, $chipDefault);
+
+    /* input fields */
+    $inputPrimary: (
+        icon: map-get($foreground, secondary-text),
+        labelEmpty: map-get($foreground, secondary-text),
+        labelFilled: map-get($foreground, text),
+        labelFocused: map-deep-get($overrides, primary, main),
+        underlineColor: map-get($foreground, disabled),
+        underlineHoverColor: map-get($foreground, secondary-text),
+        underlineFocusColor: map-deep-get($overrides, primary, dark),
+        placeholder: map-get($foreground, disabled),
+        hint: map-get($foreground, secondary-text),
+        filledBackgroundColor: rgba(map-get($pxb-black, 800), 0.5),
+    );
+    $inputWarn: (
+        icon: map-get($foreground, secondary-text),
+        labelEmpty: map-deep-get($overrides, error, main),
+        labelFilled: map-deep-get($overrides, error, main),
+        labelFocused: map-deep-get($overrides, error, main),
+        underlineColor: map-deep-get($overrides, error, dark),
+        underlineHoverColor: map-deep-get($overrides, error, main),
+        underlineFocusColor: map-deep-get($overrides, error, dark),
+        placeholder: map-get($foreground, disabled),
+        hint: map-deep-get($overrides, error, main),
+        filledBackgroundColor: rgba(255, 255, 255, 0.1),
+    );
+    $inputDisabled: (
+        text: map-get($foreground, disabled),
+        filledBackgroundColor: rgba(map-get($pxb-black, 800), 0.5),
+    );
+    @include pxb-mat-form-field($inputPrimary, $inputWarn, $inputDisabled);
 
     /* Side navigation*/
     .mat-drawer {
@@ -172,188 +225,6 @@
         color: map-get($pxb-blue, 500);
     }
 
-    /* Icon Buttons */
-    .mat-icon-button {
-        &.mat-primary {
-            color: map-deep-get($overrides, primary, main);
-        }
-        &.mat-accent {
-            color: map-get($pxb-lightBlue, 200);
-        }
-        &.mat-warn {
-            color: map-get($pxb-red, 200);
-        }
-        &:not([color]) {
-            color: map-get($pxb-black, 50);
-        }
-    }
-
-    /* Stroked */
-    .mat-stroked-button {
-        &.mat-primary {
-            border-color: map-deep-get($overrides, primary, main);
-        }
-        &.mat-accent {
-            border-color: map-get($pxb-lightBlue, 200);
-        }
-        &.mat-warn {
-            border-color: map-deep-get($overrides, error, main);
-        }
-        &.mat-button-disabled {
-            border-color: map-get($foreground, disabled);
-        }
-        &:not([color]):not(.mat-button-disabled) {
-            border-color: map-get($pxb-black, 200);
-        }
-    }
-
-    /* FABS */
-    .mat-fab,
-    .mat-mini-fab {
-        &.mat-primary {
-            color: map-get($pxb-white, 50);
-            background-color: map-get($pxb-blue, 500);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-blue, 400);
-            }
-        }
-        &.mat-accent {
-            color: map-get($pxb-white, 50);
-            background-color: map-get($pxb-lightBlue, 500);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-lightBlue, 400);
-            }
-        }
-        &.mat-warn {
-            background-color: map-deep-get($overrides, error, dark);
-            color: map-get($pxb-white, 50);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-red, 300);
-            }
-        }
-        &:not([color]) {
-            background-color: map-get($pxb-black, 500);
-            color: map-get($pxb-white, 50);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-black, 300);
-            }
-        }
-    }
-
-    /* Raised, Flat */
-    .mat-raised-button,
-    .mat-flat-button {
-        &.mat-primary {
-            color: map-get($pxb-white, 50);
-            background-color: map-get($pxb-blue, 500);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-blue, 400);
-            }
-        }
-        &.mat-accent {
-            color: map-get($pxb-white, 50);
-            background-color: map-get($pxb-lightBlue, 500);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-lightBlue, 400);
-            }
-        }
-        &.mat-warn {
-            background-color: map-deep-get($overrides, error, dark);
-            color: map-get($pxb-white, 50);
-            &:hover:not(.mat-button-disabled) {
-                background-color: map-get($pxb-red, 300);
-            }
-        }
-        /* default */
-        &:not([color]):not(.mat-button-disabled):hover {
-            background-color: map-get($pxb-black, 400);
-        }
-    }
-
-    /* Toggle button group */
-    .mat-button-toggle .mat-button-toggle-button {
-        border-color: map-get($pxb-black, 200);
-        background-color: map-get($pxb-black, 900);
-        color: map-get($pxb-black, 200);
-
-        &:hover:not(.mat-button-disabled) {
-            background-color: rgba(map-get($pxb-black, 50), 0.1);
-        }
-    }
-
-    .mat-button-toggle-checked .mat-button-toggle-button {
-        background-color: rgba(0, 123, 193, 0.36);
-        color: map-deep-get($overrides, primary, main);
-        &:hover:not(.mat-button-disabled) {
-            background-color: rgba(map-get($pxb-blue, 200), 0.36);
-        }
-    }
-
-    /* Chips */
-    .mat-chip {
-        &.mat-primary {
-            color: map-get($pxb-white, 50);
-            background-color: map-deep-get($overrides, primary, dark);
-            &:hover:not(.mat-chip-disabled) {
-                background-color: map-get($pxb-blue, 400);
-            }
-            .mat-chip-remove {
-                opacity: 1;
-                color: map-get($pxb-blue, 100);
-            }
-            &:not(.mat-chip-disabled) .mat-chip-remove:hover {
-                color: map-get($pxb-white, 50);
-                opacity: 1;
-            }
-        }
-        &.mat-accent {
-            color: map-get($pxb-white, 50);
-            background-color: map-get($pxb-lightBlue, 500);
-            &:hover:not(.mat-chip-disabled) {
-                background-color: map-get($pxb-lightBlue, 400);
-            }
-            .mat-chip-remove {
-                opacity: 1;
-                color: map-get($pxb-lightBlue, 100);
-            }
-            &:not(.mat-chip-disabled) .mat-chip-remove:hover {
-                color: map-get($pxb-white, 50);
-                opacity: 1;
-            }
-        }
-        &.mat-standard-chip.mat-chip-selected.mat-warn {
-            /* Thanks, angular default theme */
-            background-color: map-get($pxb-red, 500);
-            color: map-get($pxb-white, 50);
-            &:hover:not(.mat-chip-disabled) {
-                background-color: map-get($pxb-red, 400);
-            }
-            .mat-chip-remove {
-                color: map-get($pxb-red, 100);
-                opacity: 1;
-            }
-            &:not(.mat-chip-disabled) .mat-chip-remove:hover {
-                color: map-get($pxb-white, 50);
-                opacity: 1;
-            }
-        }
-        &:not([color]) {
-            color: map-get($foreground, text);
-            background-color: map-get($pxb-black, 500);
-            &:hover:not(.mat-chip-disabled) {
-                background-color: map-get($pxb-black, 400);
-            }
-            .mat-chip-remove {
-                color: map-get($pxb-black, 200);
-                opacity: 1;
-            }
-            &:not(.mat-chip-disabled) .mat-chip-remove:hover {
-                color: map-get($pxb-black, 100);
-                opacity: 1;
-            }
-        }
-    }
-
     /*  Drawer Content */
     .mat-drawer-content {
         background-color: map-get($pxb-darkBlack, 800);
@@ -376,37 +247,6 @@
     .mat-input-element.mat-form-field-autofill-control.mat-datepicker-input {
         color: map-get($foreground, text);
     }
-
-    /* input fields */
-    $inputPrimary: (
-        icon: map-get($foreground, secondary-text),
-        labelEmpty: map-get($foreground, secondary-text),
-        labelFilled: map-get($pxb-black, 50),
-        labelFocused: map-deep-get($overrides, primary, main),
-        underlineColor: map-get($foreground, disabled),
-        underlineHoverColor: map-get($foreground, secondary-text),
-        underlineFocusColor: map-deep-get($overrides, primary, dark),
-        placeholder: map-get($foreground, disabled),
-        hint: map-get($foreground, secondary-text),
-        filledBackgroundColor: rgba(map-get($pxb-black, 800), 0.5)
-    );
-    $inputWarn: (
-        icon: map-get($foreground, secondary-text),
-        labelEmpty: map-deep-get($overrides, error, main),
-        labelFilled: map-deep-get($overrides, error, main),
-        labelFocused: map-deep-get($overrides, error, main),
-        underlineColor: map-deep-get($overrides, error, dark),
-        underlineHoverColor: map-deep-get($overrides, error, main),
-        underlineFocusColor: map-deep-get($overrides, error, dark),
-        placeholder: map-get($foreground, disabled),
-        hint: map-deep-get($overrides, error, main),
-        filledBackgroundColor: rgba(255, 255, 255, 0.1)
-    );
-    $inputDisabled: (
-        text: map-get($foreground, disabled),
-        filledBackgroundColor: rgba(map-get($pxb-black, 800), 0.5)
-    );
-    @include input-fields($inputPrimary, $inputWarn, $inputDisabled);
 
     /* slider */
     .mat-slider {
