--- a/angular/mixins/input-field.scss
+++ b/angular/mixins/input-field.scss
@@ -1,16 +1,17 @@
-@import '~@pxblue/colors/palette';
 @import '../utility';
 
-@mixin input-fields($primaryPalette, $warnPalette, $disablePalette) {
+
+
+@mixin pxb-mat-form-field($primaryPalette, $warnPalette, $disablePalette) {
 
     .mat-form-field {
 
         &.mat-primary {
-            @include mat-input-field($primaryPalette);
+            @include colored-input-styles($primaryPalette);
         }
 
         &.mat-form-field-invalid {
-            @include mat-input-field($warnPalette);
+            @include colored-input-styles($warnPalette);
         }
 
         /* Disabled */
@@ -25,11 +26,11 @@
                 color: map-get($disablePalette, text);
             }
 
-            /* Remove dotted underline */
             &.mat-form-field-appearance-legacy,
             &.mat-form-field-appearance-standard {
                 .mat-form-field-underline {
                     background-image: none;
+                    background-color: map-get($disablePalette, text);
                 }
             }
 
@@ -45,7 +46,7 @@
     }
 }
 
-@mixin mat-input-field($palette) {
+@mixin colored-input-styles($palette) {
 
     &:not(.mat-form-field-disabled) {
 
@@ -80,6 +81,13 @@
             color: map-get($palette, labelFilled);
         }
 
+        /* Label Focus */
+        .mat-form-field-flex:focus-within {
+            .mat-form-field-label {
+                color: map-get($palette, labelFocused);
+            }
+        }
+
         /* Icon */
         .mat-form-field-suffix {
             color: map-get($palette, icon);
@@ -88,13 +96,6 @@
         /* Input Placeholders */
         input::-webkit-input-placeholder {
             color: map-get($palette, placeholder);
-        }
-
-        /* Label Focus */
-        .mat-form-field-flex:focus-within {
-            .mat-form-field-label {
-                color: map-get($palette, labelFocused);
-            }
         }
 
         /* Hint */
