--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -59,11 +59,11 @@ $material-theme: mat-light-theme($material-theme-primary, $material-theme-accent
                 secondary-text: map-get($pxb-black, 200),
                 hint-text: map-get($pxb-gray, 500),
                 base: map-get($pxb-darkBlack, 900),
-                divider: $dark-dividers,
+                divider: rgba(66, 78, 84, 0.12),
                 dividers: $dark-dividers,
-                disabled: $dark-disabled-text,
+                disabled: rgba(66, 78, 84, 0.3),
                 disabled-button: rgba(black, 0.26),
-                disabled-text: $dark-disabled-text,
+                disabled-text: rgba(66, 78, 84, 0.3),
                 elevation: map-get($pxb-darkBlack, 900),
                 icon: rgba(black, 0.54),
                 icons: rgba(black, 0.54),
